removed unnecessary RetTypeAnalyser class. something happened to the bytecode to. will try implementing the optimization to help with compile errors